--- a/firstandroidapp/app/src/main/res/layout/activity_login.xml
+++ b/firstandroidapp/app/src/main/res/layout/activity_login.xml
@@ -79,7 +79,7 @@
         android:layout_marginEnd="2dp"
         android:layout_marginBottom="2dp"
         android:text="Forgot Password?"
-        android:textSize="20dp" />
+        android:textSize="20dp" /
 
     <TextView
         android:id="@+id/mobile"
@@ -96,7 +96,5 @@
         android:padding="20dp"
         android:text="Login with mobile number"
         android:textSize="20dp" />
-
-
 
 </RelativeLayout>
